Fix of the projects navbar on mobile

--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -426,10 +426,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 .nav-link#projects-tabs-tab-third {
-  padding: 27px 0;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0 55px 55px 0;
-  font-size: 17px;
 }
 .proj-imgbx {
   position: relative;
@@ -669,11 +667,17 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   nav.navbar .navbar-nav .nav-link {
     padding: 15px 0;
   }
+
+  .nav-link#projects-tabs-tab-third {
+    padding: 27px 0;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 0 55px 55px 0;
+  }
 }
 
 .navbar-toggle-icon {
-  color: #fff; /* Set the color to white */
-  font-size: 24px; /* Adjust the font size as needed */
+  color: #fff;
+  font-size: 24px;
 }
 
 .mr-10 {
